# parrot-server

./: Dockerfile  main.py  pyproject.toml  readme.md
src/: main.py  resources.py  utils.py
