[tool.poetry]
name = "parrotinferenceserver"
version = "0.1.0"
description = ""
authors = ["mamiksik <mamiksik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
transformers = "^4.25.1"
torch = "^1.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

